--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,1 @@
-ul li{color:red;list-style:none}
+body,html{box-sizing:border-box;padding:0;margin:0}body{font-family:Arial,Helvetica,sans-serif}h1,h2,h3,h4,h5,h6{font-weight:700;text-transform:uppercase}h1,h2,h3,h4,h5,h6,p{margin:0}ul li{list-style:none}ul li h2{color:red}
