--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1,4 +1,26 @@
+html, body {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h1,h2,h3,h4,h5,h6 {
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+h1,h2,h3,h4,h5,h6,p {
+    margin: 0;
+}
+
 ul li {
-    color: red;
     list-style: none;
+
+    h2 { 
+        color: red;
+    }
 }
